; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/mi/extr_mi-cmd-var.c_mi_cmd_var_show_attributes.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/mi/extr_mi-cmd-var.c_mi_cmd_var_show_attributes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.varobj = type { i32 }

@.str = private unnamed_addr constant [41 x i8] c"mi_cmd_var_show_attributes: Usage: NAME.\00", align 1
@.str.1 = private unnamed_addr constant [54 x i8] c"mi_cmd_var_show_attributes: Variable object not found\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"editable\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"noneditable\00", align 1
@uiout = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c"attr\00", align 1
@MI_CMD_DONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mi_cmd_var_show_attributes(i8* %0, i8** %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.varobj*, align 8
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 1
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = call i32 @error(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %3
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 0
  %17 = load i8*, i8** %16, align 8
  %18 = call %struct.varobj* @varobj_get_handle(i8* %17)
  store %struct.varobj* %18, %struct.varobj** %9, align 8
  %19 = load %struct.varobj*, %struct.varobj** %9, align 8
  %20 = icmp eq %struct.varobj* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = call i32 @error(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.1, i64 0, i64 0))
  br label %23

23:                                               ; preds = %21, %14
  %24 = load %struct.varobj*, %struct.varobj** %9, align 8
  %25 = call i32 @varobj_get_attributes(%struct.varobj* %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = and i32 %26, 1
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8** %8, align 8
  br label %31

30:                                               ; preds = %23
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i8** %8, align 8
  br label %31

31:                                               ; preds = %30, %29
  %32 = load i32, i32* @uiout, align 4
  %33 = load i8*, i8** %8, align 8
  %34 = call i32 @ui_out_field_string(i32 %32, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i8* %33)
  %35 = load i32, i32* @MI_CMD_DONE, align 4
  ret i32 %35
}

declare dso_local i32 @error(i8*) #1

declare dso_local %struct.varobj* @varobj_get_handle(i8*) #1

declare dso_local i32 @varobj_get_attributes(%struct.varobj*) #1

declare dso_local i32 @ui_out_field_string(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
